@@ -39,7 +39,9 @@ final class JSONPrinter implements BufferedPrinterInterface
     /** flush printer buffer */
     public function flush()
     {
-        $this->output->write(json_encode($this->messages, JSON_UNESCAPED_SLASHES, JSON_UNESCAPED_UNICODE));
+        // NOTE: Need to use OUTPUT_RAW for JSON.
+        // Otherwise, error messages such as "...Unexpected << (T_SL)" don't get formatted properly (They get escaped into unparseable JSON)
+        $this->output->write(json_encode($this->messages, JSON_UNESCAPED_SLASHES | JSON_UNESCAPED_UNICODE), false, OutputInterface::OUTPUT_RAW);
         $this->messages = [];
     }
 
